feat: update CORS configuration to disallow credentials and allow all headers